<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gh.gothomeapp.contacts">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/hello_blank_fragment"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="phone"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/saveNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/save_number" />

    <TextView
        android:id="@+id/savedNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/saveNumberButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:text="@string/numberHasSaved" />

</RelativeLayout>
