<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gh.gothomeapp.home">

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="126dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/go_home"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/home"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/save_address"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</RelativeLayout>
